--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dompurify": "^3.0.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsdom": "^22.0.0",
+    "marked": "^5.0.0",
+    "method-override": "^3.0.0",
     "mongodb": "^5.3.0",
-    "mongoose": "^7.1.0"
+    "mongoose": "^7.1.0",
+    "slugify": "^1.6.6"
   }
 }
