--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dompurify": "^3.0.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -18,6 +19,7 @@
     "method-override": "^3.0.0",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
+    "passport": "^0.6.0",
     "slugify": "^1.6.6"
   }
 }
